# kvdb

./: Cargo.toml  LICENSE  README.md  build.rs
cli/: package.json
cli/src/: main.ts
client/: package.json  pnpm-lock.yaml
client/src/: main.ts
client/src/@types/: index.d.ts
proto/: commands.proto
src/: database.rs  main.rs  types.rs
src/commands/: del.rs  exists.rs  flushall.rs  get.rs  incr.rs  mod.rs  parser.rs  set.rs
