[package]
name = "kvdb"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tonic = "0.8.3"
prost = "0.11.5"
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0.32", features = ["derive"] }

[build-dependencies]
tonic-build = "0.8.4"
